Fix overflow on clouds

--- a/_template/scss/partials/_background.scss
+++ b/_template/scss/partials/_background.scss
@@ -5,6 +5,7 @@
     right: 0;
     bottom: 0;
     opacity: .2;
+    overflow: hidden;
 }
 
 @keyframes clouds {
